--- a/src/index.css
+++ b/src/index.css
@@ -11,9 +11,9 @@
 }
 
 body {
-  font-family: "Cairo", sans-serif;
+  font-family: "Cairo", sans-serif !important;
 }
 
 ::placeholder {
-  font-family: "Cairo", sans-serif;
+  font-family: "Cairo", sans-serif !important;
 }
